# karate-graph-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scan_all_projects.py  scan_project.py
.karate_cache/graphs/: karate-core.json  test_proj.json  test_project.json
.kiro/specs/karate-feature-graph-analyzer/: .config.kiro  design.md  requirements.md  tasks.md
python_libs/: authlib-1.7.1-py2.py3-none-any.whl  caio-0.9.25-py3-none-any.whl  cyclopts-4.11.2-py3-none-any.whl  fastmcp-3.2.4-py3-none-any.whl  griffelib-2.0.2-py3-none-any.whl  hypothesis-6.152.4-py3-none-any.whl  joserfc-1.6.4-py3-none-any.whl  jsonschema_path-0.4.6-py3-none-any.whl  py_key_value_aio-0.4.4-py3-none-any.whl  pytest_hypothesis-10.0.3-py3-none-any.whl  uncalled_for-0.3.1-py3-none-any.whl
scratch/: ai_agent_demo.py  check_api_v3.py  count_t24_apis.py  debug_pages.py  debug_parse_hierarchy.py  debug_sanitize.py  debug_t24url.py  demo_expert_analysis.py  demo_mcp_query.py  dump_user_configs.py  gen_final_graph.py  impact_analysis.py  list_test_cases.py  verify_nodes.py
src/karate_graph_analyzer/: __init__.py  __main__.py  interfaces.py  logging_config.py  mcp_server.py  models.py
src/karate_graph_analyzer/analyzer/: __init__.py  analysis_expert.py  dependency_analyzer.py  fix_expert.py  graph_diff.py  healer_expert.py
src/karate_graph_analyzer/cache/: __init__.py  cache_manager.py
src/karate_graph_analyzer/core/: context.py  tag_manager.py
src/karate_graph_analyzer/exporters/: __init__.py  exporter_factory.py  graphml_exporter.py  json_exporter.py
src/karate_graph_analyzer/graph/: __init__.py  graph_builder.py  graph_query.py  structural_builder.py
src/karate_graph_analyzer/graph/core/: dependency_linker.py  graph_merger.py  incremental_updater.py  nx_builder.py  path_classifier.py
src/karate_graph_analyzer/mcp_interface/: __init__.py  mcp_tool.py  responses.py  search_tools.py
src/karate_graph_analyzer/parser/: __init__.py  api_context_tracker.py  config_parser.py  execution_parser.py  feature_parser.py  lexer.py  orchestrator.py
src/karate_graph_analyzer/parser/extractors/: __init__.py  api_extractor.py  call_read_extractor.py  database_extractor.py  java_extractor.py  javascript_structure_extractor.py  javascript_usage_extractor.py
src/karate_graph_analyzer/services/: __init__.py  analysis_service.py  db_tracking_service.py  export_service.py  failure_context_service.py  feature_understanding_service.py  fingerprint_service.py  fix_priority_service.py  graph_cache_service.py  project_lifecycle_service.py  project_service.py  query_service.py  report_service.py  retest_selection_service.py  reusable_function_search_service.py  runtime_graph_store.py  scan_data_store.py
src/karate_graph_analyzer/storage/: __init__.py  project_registry.py
src/karate_graph_analyzer/utils/: failure_signature.py  path_resolver.py  scan_filters.py  source_snippet.py
src/karate_graph_analyzer/utils/db_dialect/: __init__.py  context.py  detector.py  registry.py  strategies.py
src/karate_graph_analyzer/visualization/: __init__.py  graph_visualizer.py  templates.py
src/karate_graph_analyzer/visualization/assets/: script.js  style.css
tests/: __init__.py  manual_parser_test.py
tests/fixtures/: sample.feature
tests/generators/: __init__.py
tests/unit/: __init__.py
