[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karate-graph"
version = "0.1.0"
description = "MCP tool for analyzing Karate Framework projects and generating dependency graphs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Karate Graph Analyzer Team"}
]
keywords = ["karate", "testing", "dependency-analysis", "graph", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "networkx>=3.2",
    "pydantic>=2.6.0",
    "pyvis>=0.3.2",
    "fastmcp>=3.2.4",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-hypothesis>=0.19.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
visualization = [
    "pyvis>=0.3.2",
    "plotly>=5.18.0",
]

[project.scripts]
karate-graph = "karate_graph_analyzer.__main__:main"
karate-graph-mcp = "karate_graph_analyzer.mcp_server:main"
karate-analyzer = "karate_graph_analyzer.__main__:main"
karate-mcp-server = "karate_graph_analyzer.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["karate_graph_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=karate_graph_analyzer",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "property: property-based tests using hypothesis",
    "unit: unit tests for specific examples",
    "integration: integration tests for end-to-end workflows",
    "performance: performance tests with timing requirements",
]

[tool.setuptools.package-data]
"karate_graph_analyzer.visualization" = ["assets/*.css", "assets/*.js"]
[tool.hypothesis]
max_examples = 100
deadline = 5000
verbosity = "normal"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
